--- a/ModMail/ModMail.csproj
+++ b/ModMail/ModMail.csproj
@@ -9,9 +9,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Content Include="..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
+        <Content Include="..\.dockerignore">
+            <Link>.dockerignore</Link>
+        </Content>
+        <Content Include="..\docker-compose.yml">
+            <Link>docker-compose.yml</Link>
+        </Content>
+        <Content Include="..\Dockerfile">
+            <Link>Dockerfile</Link>
+        </Content>
     </ItemGroup>
 
 </Project>
